[gd_scene load_steps=9 format=2]

[ext_resource path="res://title/menus/MenuSelection.tscn" type="PackedScene" id=1]
[ext_resource path="res://title/background/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://title/menus/assets/logo_new.png" type="Texture" id=3]
[ext_resource path="res://title/Title.gd" type="Script" id=4]
[ext_resource path="res://game/assets/music/79 100.ogg" type="AudioStream" id=5]
[ext_resource path="res://title/customization/Customization.tscn" type="PackedScene" id=6]
[ext_resource path="res://shared/settings/Settings.tscn" type="PackedScene" id=7]
[ext_resource path="res://title/credits/credits.tscn" type="PackedScene" id=9]

[node name="Title" type="Node"]
script = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 292, 203 )
scale = Vector2( 1.32237, 1.32237 )
texture = ExtResource( 3 )

[node name="MenuSelection" parent="." instance=ExtResource( 1 )]

[node name="Customization" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 1100 )

[node name="Credits" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, 2206 )

[node name="Settings" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 3303 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Music"

[connection signal="credits_pressed" from="MenuSelection" to="." method="_on_MenuSelection_credits_pressed"]
[connection signal="settings_pressed" from="MenuSelection" to="." method="_on_MenuSelection_settings_pressed"]
[connection signal="theme_select_pressed" from="MenuSelection" to="." method="_on_MenuSelection_theme_select_pressed"]
[connection signal="exit_customization" from="Customization" to="." method="_on_Customization_exit_customization"]
[connection signal="theme_selected" from="Customization" to="." method="_on_Customization_theme_selected"]
[connection signal="credits_exit" from="Credits" to="." method="_on_Credits_credits_exit"]
[connection signal="exit" from="Settings" to="." method="_on_Settings_exit"]
